[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://saxmono.ttf"

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = SubResource( 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 416, 8 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16, 288 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="UI" type="Control" parent="."]
margin_right = 832.0
margin_bottom = 512.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="UI"]
margin_right = 832.0
margin_bottom = 512.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" type="Label" parent="UI"]
margin_left = 32.0
margin_right = 320.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "Player1"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="UI"]
margin_left = 320.0
margin_right = 512.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "0 | 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2" type="Label" parent="UI"]
margin_left = 512.0
margin_right = 800.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "Player2"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Separator" type="ColorRect" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = -184.0
margin_right = 1.0
margin_bottom = 248.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Label" parent="UI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -32.0
margin_right = 144.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "YOU WIN !"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EdgeTop" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EdgeTop"]
position = Vector2( 416, 72 )
shape = SubResource( 3 )

[node name="Texture" type="ColorRect" parent="EdgeTop"]
margin_top = 64.0
margin_right = 832.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EdgeBot" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EdgeBot"]
position = Vector2( 416, 504 )
shape = SubResource( 3 )

[node name="Texture" type="ColorRect" parent="EdgeBot"]
margin_top = 496.0
margin_right = 832.0
margin_bottom = 512.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoalLeft" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalLeft"]
position = Vector2( -48, 288 )
shape = SubResource( 4 )

[node name="GoalRight" type="Area2D" parent="."]
visible = false
position = Vector2( 928, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalRight"]
position = Vector2( -48, 288 )
shape = SubResource( 4 )

[connection signal="body_entered" from="GoalLeft" to="." method="_on_GoalLeft_body_entered"]
[connection signal="body_entered" from="GoalRight" to="." method="_on_GoalRight_body_entered"]
